# star-tracker

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  camera.py  catalog.py  parser.py  plotting.py  requirements.txt  star.py  star_tracker.py  test.py  transformations.py
.github/workflows/: test.yml
catalog/: README.md
libs/: CMakeLists.txt
libs/Eigen3/: CMakeLists.txt
libs/olcPixelGameEngine/: CMakeLists.txt  README.md
libs/tracker/: CMakeLists.txt  camera.cpp  catalog.cpp  orientation.cpp  star.cpp  tracker.cpp
libs/tracker/include/tracker/: camera.hpp  catalog.hpp  orientation.hpp  star.hpp  tracker.hpp  utils.hpp
libs/tracker/tests/: CMakeLists.txt  helper.hpp  main.cpp  test_camera.cpp  test_catalog.cpp  test_orientation.cpp  test_tracker.cpp  utils.hpp
scripts/: download_catalog.sh
src/: CMakeLists.txt  camera.cpp  camera.hpp  catalog.cpp  catalog.hpp  main.cpp  main.rs  simulator.hpp  star.cpp  star.hpp
tests/: CMakeLists.txt  minunit.h  test_catalog.cpp  test_template.cpp
